Arreglar guardado en localStorage y flujo sin recargar la página

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="card__header">
             <h2>Formulario de incidencia</h2>
           </div>
-          <form id="incidencia-form" class="form-grid" novalidate>
+          <form id="incidenciaForm" class="form-grid" novalidate>
             <fieldset class="form-fieldset">
               <legend>Datos del incidente</legend>
               <div class="form-field">
@@ -155,7 +155,7 @@
             </fieldset>
 
             <div class="form-actions">
-              <button type="submit" id="btn_guardar" class="btn btn-primary">Guardar incidencia</button>
+              <button type="button" id="btn_guardar_incidencia" class="btn btn-primary">Guardar incidencia</button>
             </div>
           </form>
         </div>
